syntax = "proto3";
package cn.id0755.im.chat.proto;

enum CMD_ID {
//    CMD_ID_INVALID = -1;
    CMD_UNKNOWN = 0;
    CMD_HELLO = 1;
    CMD_AUTH = 2;
    CMD_SEND_MESSAGE = 3;
    CMD_CONVERSATION_LIST = 4;
    CMD_JOINTOPIC = 5;
    CMD_LEFTTOPIC = 7;
    CMD_LOGIN_REQ = 8;
    CMD_LOGIN_RESP = 9;
}

message MessageData {
     CMD_ID cmdId = 1;
     bytes content = 2;
}